BUG#19305: COALESCE partition left partition files undropped

sql/ha_partition.cc:
  Added deactivate entry also when deleting partitions
sql/mysql_priv.h:
  Added alter_info to parameter list
sql/sql_partition.cc:
  Set log_entry on partition_element for deleting partitions